gap below footer is fixed

--- a/Flashcards_React/ClientApp/src/custom.css
+++ b/Flashcards_React/ClientApp/src/custom.css
@@ -12,6 +12,31 @@ html {
     min-height: 100%;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Prompt',sans-serif;
+    color: #712c66;
+    background: #FFFAF0;
+    overflow-x: hidden;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.layout-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.main-content {
+    flex: 1;
+}
+
+
+
 h1 {
     font-size: calc(1.375rem + 1.1vw);
 }
@@ -71,24 +96,7 @@ h1 {
     }
 }
 
-/* For main contents of the html container*/
-body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Prompt',sans-serif;
-    color: #712c66;
-    background: #FFFAF0;
-    overflow-x: hidden;
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
 
-}
-
-.main-content {
-    flex: 1;
-}
 
 
 /* ********** Sections On Different Pages ********** */
